--- a/CheckYourEligibility-Admin/Views/Home/Index.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Index.cshtml
@@ -22,25 +22,30 @@
         {
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-full">
+
+                    <h2 class="govuk-heading-m">
+                        Free school meals
+                    </h2>
+
                     <div class="dfe-grid-container">
 
                         <div class="dfe-card-container">
                             <div class="def-card">
                                 <a class="govuk-heading-m govuk-link govuk-link--no-visited-state dfe-card-link--header" id="individual" aria-labelledby="individual-heading individual-description" href="@Url.Action("Enter_Details", "Check")">
-                                    <span id="individual-heading" class="sr-only">Check free school meals - single student</span>
-                                    Check free school meals - single student
+                                    <span id="individual-heading" class="sr-only">Run a check for one parent or guardian</span>
+                                    Run a check for one parent or guardian
                                 </a>
-                                <p id="individual-description">Find out if individual pupils can get free school meals.</p>
+                                <p id="individual-description">Run an eligibility check for one parent or guardian.</p>
                             </div>
                         </div>
 
                         <div class="dfe-card-container">
                             <div class="def-card">
                                 <a class="govuk-heading-m govuk-link govuk-link--no-visited-state dfe-card-link--header" id="batch" aria-labelledby="batch-heading batch-description" href="@Url.Action("Batch_Check", "BulkUpload")">
-                                    <span id="batch-heading" class="sr-only">Check free school meals - multiple students</span>
-                                    Check free school meals - multiple students
+                                    <span id="batch-heading" class="sr-only">Run a batch check</span>
+                                    Run a batch check
                                 </a>
-                                <p id="batch-description">Find out if multiple pupils can get free school meals by uploading a csv template.</p>
+                                <p id="batch-description">Run an eligibility check for multiple parents or guardians.</p>
                             </div>
                         </div>
 
@@ -50,7 +55,7 @@
                                     <span id="appeals-heading" class="sr-only">Process appeals</span>
                                     Process appeals
                                 </a>
-                                <p id="appeals-description">Check the status of applications being appealed, and declare those ready for local authority review.</p>
+                                <p id="appeals-description">Check the status of appealed applications and send for local authority review.</p>
                             </div>
                         </div>
 
@@ -60,7 +65,7 @@
                                     <span id="finalise-heading" class="sr-only">Finalise applications</span>
                                     Finalise applications
                                 </a>
-                                <p id="finalise-description">Finalise applications for free school meals.</p>
+                                <p id="finalise-description">Finalise applications.</p>
                             </div>
                         </div>
 
@@ -70,7 +75,7 @@
                                     <span id="search-heading" class="sr-only">Search all records</span>
                                     Search all records
                                 </a>
-                                <p id="search-description">Search all pupil free school meal records and export results.</p>
+                                <p id="search-description">Search all records and export results.</p>
                             </div>
                         </div>
 
