temp working update

--- a/CheckYourEligibility-Parent/Views/Shared/_ValidationSummary.cshtml
+++ b/CheckYourEligibility-Parent/Views/Shared/_ValidationSummary.cshtml
@@ -36,6 +36,7 @@
 
             return propertyOrder.IndexOf(extractedPropertyName);
         })
+        .DistinctBy(e => e.Error)
         .ToList();
 }
 
