--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Found_Pending.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Found_Pending.cshtml
@@ -1,7 +1,7 @@
 ﻿@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
-<div class="govuk-grid-column-full">
+<div class="govuk-grid-column-full" data-type="Not_Found_Pending">
         <h1 class="govuk-heading-l">We could not check your children’s entitlement to free school meals</h1>
         <p>It’s possible that the Universal Credit statements needed to perform the check aren’t currently available.  </p>
 
