--- a/CheckYourEligibility-Parent/Views/Shared/_ValidationSummary.cshtml
+++ b/CheckYourEligibility-Parent/Views/Shared/_ValidationSummary.cshtml
@@ -18,6 +18,13 @@
 
     }
 
+    var dobMappings = new Dictionary<string, string>
+    {
+        {"DateOfBirth.Day", "Day"},
+        {"DateOfBirth.Month", "Month"},
+        {"DateOfBirth.Year", "Year"}
+    };
+
 
     var flattenedErrors = Model
         .SelectMany(m => m.Value.Errors
@@ -33,6 +40,11 @@
             var extractedPropertyName = x.Field.Contains("ChildList")
             ? x.Field.Substring(x.Field.LastIndexOf('.') + 1)
             : x.Field;
+
+            if (dobMappings.ContainsKey(x.Field))
+            {
+                extractedPropertyName = dobMappings[x.Field];
+            }
 
             return propertyOrder.IndexOf(extractedPropertyName);
         })
