--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Eligible.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Eligible.cshtml
@@ -2,7 +2,7 @@
 
 <a class="govuk-back-link-nolink"></a>
 
-<div class="govuk-grid-column-full" data-type="eligible">
+<div class="govuk-grid-column-full" data-type="Eligible">
     <h1 class="govuk-heading-l">Your children are entitled to free school meals</h1>
 
     <h2 class="govuk-heading-m">What to do next</h2>
