Update EnterDetails content and refactor NI/Nass attributes and validation to work with additional field. Also, rename NI and NASS across instances for cohesion.

--- a/CheckYourEligibility-Admin/Views/Application/ApplicationDetailPartial.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationDetailPartial.cshtml
@@ -137,7 +137,7 @@
                 @if (!string.IsNullOrEmpty(Model.ParentNI))
                 {
                     <dt class="govuk-summary-list__key">
-                        National Insurance number
+                        National Insurance Number
                     </dt>
                     <dd class="govuk-summary-list__value">
                         @Model.ParentNI
@@ -147,7 +147,7 @@
                 else
                 {
                     <dt class="govuk-summary-list__key">
-                        Asylum support reference number
+                        Asylum Support Reference Number
                     </dt>
                     <dd class="govuk-summary-list__value">
                         @Model.ParentNas
