--- a/CheckYourEligibility-Admin/Views/BulkUpload/Batch_Check.cshtml
+++ b/CheckYourEligibility-Admin/Views/BulkUpload/Batch_Check.cshtml
@@ -22,7 +22,7 @@
             <h2 class="govuk-heading-m">How it works </h2>
             <ol class="govuk-list govuk-list--number">
                 <li>Download the <a href="~/documents/batchchecktemplate.csv" class="govuk-link">batch check template</a> (XXkb) </li>
-                <li>Complete the template by adding the details of all parents you wish to check: Name, Date of birth, National Insurance number or Asylum support reference number. Make sure you save it as a csv file. </li>
+                <li>Complete the template by adding the details of all parents you wish to check: Name, Date of birth, National Insurance Number or Asylum Support Reference Number. Make sure you save it as a csv file. </li>
                 <li>Upload the completed template using the ‘Upload template’ function on this page.  </li>
                 <li>You’ll be given a file to download containing results. </li>
             </ol>
@@ -42,7 +42,7 @@
             </div>
 
             <button class="govuk-button" data-module="govuk-button">
-                Perform Checks
+                Run checks
             </button>
         </div>
     </div>
