--- a/CheckYourEligibility-Admin/Views/Check/Check_Answers.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Check_Answers.cshtml
@@ -51,7 +51,7 @@
                     {
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
-                                Asylum support reference number
+                                Asylum Support Reference Number
                             </dt>
                             <dd class="govuk-summary-list__value">
                                 @Model.ParentNass
@@ -62,7 +62,7 @@
                     {
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
-                                National insurance number
+                                National Insurance Number
                             </dt>
                             <dd class="govuk-summary-list__value">
                                 @Model.ParentNino
