--- a/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
@@ -93,7 +93,7 @@
     <div class="govuk-form-group">
         <fieldset class="govuk-fieldset" aria-describedby="ni-number-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-                Do you have a National Insurance number?
+                Do you have a National Insurance Number?
             </legend>
 
             <div id="ni-number-hint" class="govuk-hint">
@@ -112,7 +112,7 @@
 
                     <div class="govuk-form-group">
                         <label class="govuk-label" for="ni-number-entered">
-                            Your National Insurance number
+                            Your National Insurance Number
                         </label>
                         <div id="ni-number-entered-hint" class="govuk-hint">
                             For example, ‘QQ 12 34 56 C’
