--- a/CheckYourEligibility-Parent/Views/Home/Index.cshtml
+++ b/CheckYourEligibility-Parent/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
                 <p>While using this service, you will need to: </p>
 
                 <ul class="govuk-list--bullet">
-                    <li>provide a National Insurance number or asylum support reference number (previously NASS reference number)</li>
+                    <li>provide a National Insurance Number or Asylum Support Reference Number (previously NASS reference number)</li>
                     <li>create or sign in to a GOV.UK One Login account</li>
                     <li>tell us details about any children you want to get free school meals, including the name of their school</li>
                 </ul>
