--- a/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Enter_Details.cshtml
+++ b/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Enter_Details.cshtml
@@ -91,7 +91,7 @@
     <div class="govuk-form-group">
         <fieldset class="govuk-fieldset" aria-describedby="ni-number-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-                Do you have a National Insurance number?
+                Do you have a National Insurance Number?
             </legend>
 
             <div id="ni-number-hint" class="govuk-hint">
@@ -100,7 +100,7 @@
 
             <div class="govuk-radios" data-module="govuk-radios">
                 <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" asp-for="IsNassSelected" type="radio" value="false" aria-controls="conditional-ni-number" aria-expanded="false">
+                    <input class="govuk-radios__input" asp-for="NinAsrSelection" type="radio" value="NinSelected" aria-controls="conditional-ni-number" aria-expanded="false">
                     <label class="govuk-label govuk-radios__label" for="ni-number">
                         Yes
                     </label>
@@ -110,7 +110,7 @@
 
                     <div class="govuk-form-group">
                         <label class="govuk-label" for="ni-number-entered">
-                            Parent's National Insurance number
+                            Parent's National Insurance Number
                         </label>
                         <div id="ni-number-entered-hint" class="govuk-hint">
                             For example, ‘QQ 12 34 56 C’
@@ -122,7 +122,7 @@
                     </div>
                 </div>
                 <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" asp-for="IsNassSelected" type="radio" value="true">
+                    <input class="govuk-radios__input" asp-for="NinAsrSelection" type="radio" value="AsrnSelected">
                     <label class="govuk-label govuk-radios__label" for="ni-number-2">
                         No, I do not have one
                     </label>
