Update National Insurance number and asylum seeker support number capitalisation.

--- a/CheckYourEligibility-Admin/Views/Application/ApplicationDetailPartial.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationDetailPartial.cshtml
@@ -137,7 +137,7 @@
                 @if (!string.IsNullOrEmpty(Model.ParentNI))
                 {
                     <dt class="govuk-summary-list__key">
-                        National Insurance Number
+                        National Insurance number
                     </dt>
                     <dd class="govuk-summary-list__value">
                         @Model.ParentNI
@@ -147,7 +147,7 @@
                 else
                 {
                     <dt class="govuk-summary-list__key">
-                        Asylum Support Reference Number
+                        Asylum support reference number
                     </dt>
                     <dd class="govuk-summary-list__value">
                         @Model.ParentNas
