--- a/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Check_Answers.cshtml
+++ b/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Check_Answers.cshtml
@@ -46,7 +46,7 @@
 
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    Asylum Support Reference Number
+                    Asylum support reference number
                 </dt>
                 <dd class="govuk-summary-list__value">
 
