--- a/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
@@ -93,7 +93,7 @@
     <div class="govuk-form-group">
         <fieldset class="govuk-fieldset" aria-describedby="ni-number-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-                Do you have a National Insurance Number?
+                Do you have a National Insurance number?
             </legend>
 
             <div id="ni-number-hint" class="govuk-hint">
@@ -112,7 +112,7 @@
 
                     <div class="govuk-form-group">
                         <label class="govuk-label" for="ni-number-entered">
-                            Your National Insurance Number
+                            Your National Insurance number
                         </label>
                         <div id="ni-number-entered-hint" class="govuk-hint">
                             For example, ‘QQ 12 34 56 C’
@@ -120,7 +120,7 @@
                         <p class="govuk-error-message">
                             <span asp-validation-for="NationalInsuranceNumber"></span>
                         </p>
-                        <input class="govuk-input govuk-!-width-one-third" asp-controller="Check" asp-for="NationalInsuranceNumber" type="text" spellcheck="false" aria-describedby="ni-number-entered-hint" autocomplete="text" aria-label="Your National Insurance Number">
+                        <input class="govuk-input govuk-!-width-one-third" asp-controller="Check" asp-for="NationalInsuranceNumber" type="text" spellcheck="false" aria-describedby="ni-number-entered-hint" autocomplete="text" aria-label="Your National Insurance number">
                     </div>
                 </div>
                 <div class="govuk-radios__item">
