--- a/CheckYourEligibility-Parent/Views/Home/Parental_Guidance.cshtml
+++ b/CheckYourEligibility-Parent/Views/Home/Parental_Guidance.cshtml
@@ -18,7 +18,7 @@
     <li>Pension Credit</li>
     <li>Child Tax Credit</li>
     <li>Working Tax Credit run on </li>
-    <p class="govuk-body">Older individuals who have their own National Insurance Number and receive these benefits directly – rather than through a parent and guardian – are also entitled to free school meals if they meet the relevant conditions.</p>
+    <p class="govuk-body">Older individuals who have their own National Insurance number and receive these benefits directly – rather than through a parent and guardian – are also entitled to free school meals if they meet the relevant conditions.</p>
 </ul>
 
 <h2 class="govuk-heading-m">How to apply for free school meals</h2>
