--- a/CheckYourEligibility-Admin/Views/Home/Guidance.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Guidance.cshtml
@@ -47,7 +47,7 @@
         </div>
 
         <div id="accordion-default-content-2" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-2">
-            <p>When checking an applicant with an Asylum Support Reference Number (formerly NASS number), a document proving they are receiving relevant support under part VI of the Immigration and Asylum Act 1999 is needed. This may include:</p>
+            <p>When checking an applicant with an asylum support reference number (formerly NASS number), a document proving they are receiving relevant support under part VI of the Immigration and Asylum Act 1999 is needed. This may include:</p>
             <ul>
                 <li>a letter from the Home Office</li>
                 <li>a visa or student visa</li>
