--- a/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Enter_Details.cshtml
+++ b/CheckYourEligibility-Admin/Views/LocalAuthority/Check/Enter_Details.cshtml
@@ -91,7 +91,7 @@
     <div class="govuk-form-group">
         <fieldset class="govuk-fieldset" aria-describedby="ni-number-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-                Do you have a National Insurance Number?
+                Do you have a National Insurance number?
             </legend>
 
             <div id="ni-number-hint" class="govuk-hint">
@@ -110,7 +110,7 @@
 
                     <div class="govuk-form-group">
                         <label class="govuk-label" for="ni-number-entered">
-                            Parent's National Insurance Number
+                            Parent's National Insurance number
                         </label>
                         <div id="ni-number-entered-hint" class="govuk-hint">
                             For example, ‘QQ 12 34 56 C’
