--- a/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Check_Answers.cshtml
@@ -64,7 +64,7 @@
             {
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                        National Insurance Number
+                        National Insurance number
                     </dt>
                     <dd class="govuk-summary-list__value">
                         @Model.ParentNino
