--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Could_Not_Check.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Could_Not_Check.cshtml
@@ -4,7 +4,7 @@
 <div class="govuk-grid-column-full" data-type="Could_Not_Check">
     <h1 class="govuk-heading-l">We could not check your children’s entitlement to free school meals</h1>
     <p>You need to enter a National Insurance or asylum support reference number in order for the check to take place.</p>
-    <p><a href="https://www.gov.uk/lost-national-insurance-number?">How to find your National Insurance Number</a></p>
+    <p><a href="https://www.gov.uk/lost-national-insurance-number?">How to find your National Insurance number</a></p>
     <p>An asylum support reference number can usually be found on letters from the Home Office.</p>
     <p>If you need more help, please contact your school administrator.</p>
 
