Update parent portal to work with only imported js

--- a/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model CheckYourEligibility_FrontEnd.Models.Parent
+﻿
+@model CheckYourEligibility_FrontEnd.Models.Parent
 
 @{
     ViewData["Title"] = "Check Details";
