--- a/CheckYourEligibility-Parent/Views/Shared/_Layout.cshtml
+++ b/CheckYourEligibility-Parent/Views/Shared/_Layout.cshtml
@@ -17,7 +17,6 @@
 </head>
 
 <body class="govuk-template__body">
-    <script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
     <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
 
     <header class="dfe-header" role="banner">
@@ -32,8 +31,8 @@
                 </a>
             </div>
             <nav id="header-navigation" class="dfe-header__navigation" aria-label="Primary navigation" aria-labelledby="label-navigation">
-                <div id="spacerForNoLinkContentRemoveWhenAddingLinksBelow" style="min-height: 10px;">
-                    @* Remove this content and surrounding div and style when adding in links. *@
+                <div id="spacerForNoLinkContentRemoveWhenAddingLinksBelow">
+                    &nbsp;
                 </div>
 
                 @*<ul class="dfe-header__navigation-list" id="navigation">
@@ -125,10 +124,7 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script type="module" src="~/js/govuk-frontend.min.js"></script>
     <script src="~/js/dfefrontend.js"></script>
-    <script type="module">
-        import { initAll } from '../js/govuk-frontend.min.js'
-        initAll()
-    </script>
+    <script type="module" src="~/js/javascript-starter.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
