--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Eligible_LA.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Eligible_LA.cshtml
@@ -1,7 +1,7 @@
 ﻿@* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
-<div class="govuk-grid-row">
+<div class="govuk-grid-row" id="content" data-type="Eligible_LA">
     <div class="govuk-grid-column-full">
         <h1 class="govuk-heading-l">@TempData["OutcomeText"]</h1>
 
