--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
@@ -1,44 +1,46 @@
 ﻿@* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
-<div class="govuk-width-container">
-    <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-            <p class="govuk-heading-l">@TempData["OutcomeText"]</p>
-            <p class="govuk-body">If the parent wishes to appeal, you’ll need to send their supporting evidence to your local authority for review.</p>
+<div id="content" data-type="Not_Eligible">
+    <div class="govuk-width-container">
+        <div class="govuk-grid-row">
+            <div class="govuk-grid-column-two-thirds">
+                <p class="govuk-heading-l">@TempData["OutcomeText"]</p>
+                <p class="govuk-body">If the parent wishes to appeal, you’ll need to send their supporting evidence to your local authority for review.</p>
+            </div>
         </div>
     </div>
-</div>
 
-<div class="govuk-!-padding-bottom-3"></div>
+    <div class="govuk-!-padding-bottom-3"></div>
 
 
-<div class="govuk-width-container">
-    <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-            <h2 class="govuk-heading-m">How to appeal</h2>
-            <ol class="govuk-list govuk-list--number">
-                <li>Go to the <a class="govuk-link" rel="noreferrer noopener" target="_blank" href="evidence-guidance">guidance for reviewing evidence page</a> to see a complete list of acceptable evidence types. If you haven’t received any evidence yet, contact the the parent or guardian. </li>
-                <li>Select 'Appeal now' on this page and provide the information requested. </li>
-                <li>Once completed, you will receive further instructions on how to send on supporting evidence to your local authority.</li>
-            </ol>
+    <div class="govuk-width-container">
+        <div class="govuk-grid-row">
+            <div class="govuk-grid-column-two-thirds">
+                <h2 class="govuk-heading-m">How to appeal</h2>
+                <ol class="govuk-list govuk-list--number">
+                    <li>Go to the <a class="govuk-link" rel="noreferrer noopener" target="_blank" href="evidence-guidance">guidance for reviewing evidence page</a> to see a complete list of acceptable evidence types. If you haven’t received any evidence yet, contact the the parent or guardian. </li>
+                    <li>Select 'Appeal now' on this page and provide the information requested. </li>
+                    <li>Once completed, you will receive further instructions on how to send on supporting evidence to your local authority.</li>
+                </ol>
+            </div>
         </div>
     </div>
+
+    @* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
+    <a class="govuk-back-link-nolink"></a>
+
+    <div class="govuk-!-padding-bottom-3"></div>
+
+    <form action="Enter_Child_Details" method="get" novalidate>
+        <button class="govuk-button govuk-!-margin-top-5" data-module="govuk-button">
+            Appeal now
+        </button>
+    </form>
+    <p>Alternatively, you can contact the Department for Education support desk at <a href="">ecs.admin@education.gov.uk </a>to request a separate check.</p>
+
+    <div class="govuk-!-padding-bottom-2"></div>
+
+    <p> @Html.ActionLink("Return to dashboard", "index", "home")</p>
+    <p> @Html.ActionLink("Sign Out", "SignOut", "Account")</p>
 </div>
-
-@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
-<a class="govuk-back-link-nolink"></a>
-
-<div class="govuk-!-padding-bottom-3"></div>
-
-<form action="Enter_Child_Details" method="get" novalidate>
-    <button class="govuk-button govuk-!-margin-top-5" data-module="govuk-button">
-        Appeal now
-    </button>
-</form>
-<p>Alternatively, you can contact the Department for Education support desk at <a href="">ecs.admin@education.gov.uk </a>to request a separate check.</p>
-
-<div class="govuk-!-padding-bottom-2"></div>
-
-<p> @Html.ActionLink("Return to dashboard", "index", "home")</p>
-<p> @Html.ActionLink("Sign Out", "SignOut", "Account")</p>
