--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Found.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Found.cshtml
@@ -1,7 +1,7 @@
 ﻿@* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
-<div class="govuk-grid-row">
+<div class="govuk-grid-row" id="content" data-type="Not_Found">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">@TempData["OutcomeText"]</h1>
         <p>The personal information you entered doesn’t match the departmental records.  </p>
