--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Found_Pending.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Found_Pending.cshtml
@@ -1,7 +1,7 @@
 ﻿@* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
-<div class="govuk-grid-row">
+<div class="govuk-grid-row" id="content" data-type="Not_Found_Pending">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">>@TempData["laOutcome"]</h1>
         <p>It’s possible that the Universal Credit statements needed to perform the check aren’t currently available.</p>
