Remove inline styling

--- a/CheckYourEligibility-Admin/Views/Application/EditorTemplates/SelectPersonEditorViewModel.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/EditorTemplates/SelectPersonEditorViewModel.cshtml
@@ -27,7 +27,7 @@
     @Html.HiddenFor(model => model.Person.Id)
     @if(Model.ShowSelectorCheck)
     {
-    <td class="govuk-checkboxes__item moj-multi-select__checkbox" style="text-align:center">
+    <td class="govuk-checkboxes__item moj-multi-select__checkbox centerer">
         @Html.CheckBoxFor(model => model.Selected)
         </td>
     }
