--- a/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
@@ -95,7 +95,7 @@
                     <p class="govuk-error-message">
                         <span asp-validation-for="ChildList[i].School.URN"></span>
                     </p>
-                    <input id="school-search-@i" class="noJsRemove govuk-search govuk-input govuk-!-width-two-thirds" type="text" oninput="searchSchool(this.value, @i)" autocomplete="off" aria-label="School Search" />
+                        <input id="school-search-@i" class="noJsRemove govuk-search govuk-input govuk-!-width-two-thirds @(ViewData.ModelState[$"ChildList[{@i}].LastName"]?.Errors.Count > 0 ? "govuk-input--error" : "")" type="text" oninput="searchSchool(this.value, @i)" autocomplete="off" aria-label="School Search" />
                     <input hidden asp-for="ChildList[i].School.Name" id="ChildList[@i].School.Name" />
                     
                     <label class="govuk-label govuk-!-font-weight-bold noJsShow" for="ChildList[@i].School.URN">
